# ChangeLog for sys-apps/yaboot
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/ChangeLog,v 1.11 2003/02/12 09:12:33 vapier Exp $

*yaboot-1.3.8-r1.ebuild (Dec 20 2002)

  06 Jan 2003; Seemant Kulleen <seemant@gentoo.org> *.ebuild :

  PROVIDE=virtual/bootloader

  20 Dec 2002; Mark Guertin <gerk@gentoo.org> yaboot-1.3.8-r1.ebuild:
  Added a patched yabootconfig that detects and adds dual boot configs
  for OS X and Mac OS.  Added -alpha to keywords and promoted this
  to stable.

*yaboot-1.3.8 (12-11-02)

  11 Dec 2002; Calum Selkirk <cselkirk@gentoo.org> yaboot-1.3.8.ebuild
  files/digest-yaboot-1.3.8 :

  New ebuild. This release adds support for the PMac Windtunnel and Xserve.
  
  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*yaboot-1.3.7 (Nov 16 2002); cselkirk <cselkirk@gentoo.org>

    16 Nov 2002; Calum Selkirk <cselkirk@gentoo.org> yaboot-1.3.7.ebuild
    digest-yaboot-1.3.7 :
    
    new ebuild. This mainly an upstream maintaince release with some small
    buxfixes, it's KEYWORDED ~ppc but should be safe to KEYWORD ppc after some
    testing

*yaboot-1.3.6-r1 (June 21 2002); Gerk (gerk@gentoo.org)

  04 Sept 2002; Calum Selkirk <cselkirk@gentoo.org> yaboot-1.3.6-r1 :

  Fixed the path to /usr/lib/yaboot/

  20 Jul 2002; Mark Guertin <gerk@gentoo.org> yaboot-1.3.6.ebuild :
  Adjusted keywords

  14 Jul 2002; phoen][x <phoenix@gentoo.org> yaboot-1.3.6.ebuild :
  Added LICENSE, KEYWORDS, SLOT.

	Adjusted ARCH check and added RDEPEND, SLOT, LICENSE to build
	(no -r1 as no need to recompile for this)

*yaboot-1.3.6-r1 (Wed Apr 24 17:09:25 2002 CEST); pvdabeel <pvdabeel@gentoo.org>:

Wed Apr 24 17:09:45 2002 CEST; pvdabeel <pvdabeel@gentoo.org>: 
	
	Install manpages in /usr/share instead of /usr/usr/share

*yaboot-1.3.6 (Sun Mar 17 23:27:28 CST 2002)

Sun Mar 17 23:29:06 CST 2002; Kain <kain@kain.org> all:
