@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/yaboot
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/ChangeLog,v 1.11 2003/02/12 09:12:33 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/yaboot/ChangeLog,v 1.12 2003/02/12 21:44:01 pvdabeel Exp $
+
+*yaboot-1.3.9.ebuild (Feb 12 2003)
+
+  12 Feb 2003; Pieter Van den Abeele <pvdabeel@gentoo.org> yaboot-1.3.9.ebuild
+  new release with newest powerbook support
 
 *yaboot-1.3.8-r1.ebuild (Dec 20 2002)
 
